--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,18 @@
-Package: prevedere
+Package: prevederer
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Title: R wrapper for the Prevedere API
+Version: 0.0.0.9000
+Authors@R: person("Wil","Davis",,"davis.3243@osu.edu",role=c("aut","cre"),comment = c(ORCID = "0000-0001-9780-2576"))
+Description: Easy and efficient access to the Prevedere API for R users.
+License: CCO
+URL: https://www.prevedere.com/, https://github.com/wkdavis/prevederer
+BugReports: https://github.com/wkdavis/prevederer/issues
+Depends:
+  R (>= 3.2.0)
 Imports:
   httr
+VignetteBuilder: knitr
 Encoding: UTF-8
-LazyData: true
+LazyData: yes
+Roxygen: list(markdown = TRUE, roclets = c("rd", "namespace", "collate"))
 RoxygenNote: 6.1.1
