--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.0.0.9000
 Authors@R: person("Wil","Davis",,"davis.3243@osu.edu",role=c("aut","cre"),comment = c(ORCID = "0000-0001-9780-2576"))
 Description: Easy and efficient access to the Prevedere API for R users.
 License: CCO
-URL: https://www.prevedere.com/, https://github.com/wkdavis/prevederer
+URL: https://www.prevedere.com/, https://github.com/wkdavis/prevederer, https://api.prevedere.com/index.html
 BugReports: https://github.com/wkdavis/prevederer/issues
 Depends:
   R (>= 3.2.0)
