--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,6 +1,8 @@
 ^.*\.Rproj$
 ^\.Rproj\.user$
 ^data-raw$
-.*\.Rmd
-.*\.md
+^README\.Rmd$
 ^LICENSE\.md$
+^\.travis\.yml$
+^appveyor\.yml$
+^codecov\.yml$
