--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,8 @@ Imports:
   httr
 Suggests: 
     testthat (>= 2.1.0),
-    knitr
+    knitr,
+    covr
 VignetteBuilder: knitr
 Encoding: UTF-8
 LazyData: yes
