--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,12 @@
 Package: prevederer
 Type: Package
 Title: R Wrapper for the Prevedere API
-Version: 0.0.0.9000
-Authors@R: person("Wil","Davis",,"davis.3243@osu.edu",role=c("aut","cre"),comment = c(ORCID = "0000-0001-9780-2576"))
+Version: 0.0.1
+Authors@R: c(
+    person("Wil","Davis",,"davis.3243@osu.edu",role=c("aut","cre"),comment = c(ORCID = "0000-0001-9780-2576")),
+    person("Hiram","Foster",,"hiramfoster.co@gmail.com",role=c("ctb")),
+    person("Ted","Dickinson",,"tmdickinson@gmail.com",role=c("ctb"))
+    )
 Description: Easy and efficient access to the Prevedere API for R users.
 License: MIT + file LICENSE
 URL: https://github.com/wkdavis/prevederer, https://api.prevedere.com/index.html, https://www.prevedere.com/
