forgot to indent lines

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,10 +7,10 @@ Authors@R: c(
     person("Hiram","Foster",,"hiramfoster.co@gmail.com",role=c("ctb")),
     person("Ted","Dickinson",,"tmdickinson@gmail.com",role=c("ctb"))
     )
-Description: Easy and efficient access to the API provided by 'Prevedere',
-an industry insights and predictive analytics company. Query and 
-download indicators, models and workbenches built with 'Prevedere' for further 
-analysis and reporting. <https://www.prevedere.com/>
+Description: Easy and efficient access to the API provided by 'Prevedere', 
+  an industry insights and predictive analytics company. Query and 
+  download indicators, models and workbenches built with 'Prevedere' for further 
+  analysis and reporting <https://www.prevedere.com/>.
 License: MIT + file LICENSE
 URL: https://github.com/wkdavis/prevederer, https://api.prevedere.com/index.html, https://www.prevedere.com/
 BugReports: https://github.com/wkdavis/prevederer/issues
